[JAEGER] Bug 582268: add lhs-is-constant specialization to mod check for negative zero result, r=dvander